language/move-lang/tests/move_check/parser/struct_missing_lbrace.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_missing_lbrace.move:3:5
  │
2 │     struct S { f: u64 // }
  │              - To match this '{'
3 │     fun f() {}
  │     ^ Expected '}'

